--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,11 @@
   applications:
   - name: onlinecourse
     routes:
-      - route: dish-tees.mybluemix.net
+      - route: dishtees86.us-south.cf.appdomain.cloud
     memory: 128M
     buildpack: python_buildpack
   - name: onlinecourse-nginx
     routes:
-      - route: dish-tees.mybluemix.net/static
+      - route: dishtees86.us-south.cf.appdomain.cloud/static
     memory: 128M
     buildpack: staticfile_buildpack
